--- a/src/app/design-system/design-system.component.html
+++ b/src/app/design-system/design-system.component.html
@@ -1,1 +1,104 @@
-<p>design-system works!</p>
+
+
+<div class="design-system-container" >
+
+    <p class="title headline-4">Product Feedback App Design System</p>
+    <p class="section-label headline-5">Colors</p>
+    
+    <div class="box-container">
+        
+        <ng-container *ngFor="let color of PRODUCT_FEEDBACK_APP_COLOR_SPECS">
+            
+            <div class="box" [style.backgroundColor]="color.hex">
+                
+                <p class="color-text" [style.color]="color.textColor">{{color.hex}}</p>
+                
+                <span class="color-text" [style.color]="color.textColor">RGB: {{color.red}}, {{color.green}}, {{color.blue}}</span>
+                
+            </div>
+            
+        </ng-container>
+        
+    </div>
+    
+    <p class="section-label headline-5">Typography</p>
+
+    <div class="section typography-section">
+
+        <div class="font-container font-highlight">
+            <p class="h-1">JOST</p>
+        </div>
+
+        <div class="font-container font-letters-container">
+            <span class="font-letters caps">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</span>
+            <span class="font-letters lower">a b c d e f g h i j k l m n o p q r s t u v w x y z 1 2 3 4 5 6 7 8 9 0 ! @ # $ % ^ & * ( ) _ +</span>
+        </div>
+
+    </div>
+
+    <div class="section specs-section">
+
+        <div class="specs-container">
+            
+            <div class="spec-container" *ngFor="let spec of PRODUCT_FEEDBACK_APP_TYPOGRAPHY_SPECS.slice(0,4)">
+            
+                <p class="typography-spec" [innerText]="generateSpecText(spec)"></p>
+                <p [ngStyle]="spec.cssClasses">{{spec.exampleText}}</p>
+    
+            </div>
+
+        </div>
+
+        <div class="specs-container">
+
+            <div class="spec-container" *ngFor="let spec of PRODUCT_FEEDBACK_APP_TYPOGRAPHY_SPECS.slice(4)">
+            
+                <p class="typography-spec" [innerText]="generateSpecText(spec)"></p>
+                <p class="typogaphy-example" [ngStyle]="spec.cssClasses">{{spec.exampleText}}</p>
+    
+            </div>
+
+        </div>
+        
+    </div>
+    
+    <p class="section-label headline-5">Buttons</p>
+    <p class="section-label headline-5">Interactive elements</p>
+    <p class="section-label headline-5">Form elements</p>
+    <p class="section-label headline-5">Material Typography</p>
+
+    <div class="section typography-section">
+        
+        <div class="text-container">
+            <p class="title headline-6">Typography with mixins</p>
+            
+            <p class="h-1">Feedback app Headline 1</p>
+            <p class="h-2">Feedback app Headline 2</p>
+            <p class="h-3">Feedback app Headline 3</p>
+            <p class="h-4">Feedback app Headline 4</p>
+            <p class="b-1">Feedback app Body 1</p>
+            <p class="b-2">Feedback app Body 2</p>
+            <p class="b-3">Feedback app Body 3</p>
+            
+        </div>
+        
+        
+        <div class="text-container">
+            <p class="title headline-6">Material typography levels</p>
+    
+            <p class="headline-1">Headline 1</p>
+            <p class="headline-2">Headline 2</p>
+            <p class="headline-3">Headline 3</p>
+            <p class="headline-4">Headline 4</p>
+            <p class="headline-5">Headline 5</p>
+            <p class="headline-6">Headline 6</p>
+            <p class="body-1">Body 1</p>
+            <p class="body-2">Body 2</p>
+            <p class="subtitle-2">Subtitle 2</p>
+            <p class="caption">caption</p>
+            
+        </div>
+
+    </div>
+
+</div>
