[Design System] 2 - Implements Product Feedback App design system
-Buttons
-Interactive elements
-Adds color mixin and variables

--- a/src/app/_sanbox-mixins.scss
+++ b/src/app/_sanbox-mixins.scss
@@ -13,6 +13,16 @@
 
 ////////////// END FLEXBOX //////////////////////
 
+////////////// COLOR //////////////////////
+
+
+@mixin color($backgroundColor: transparent, $color: white) {
+    background-color: $backgroundColor;
+    color: $color;
+}
+
+////////////// END COLOR //////////////////////////// 
+/// 
 ////////////// BORDER //////////////////////
 
 
