--- a/src/app/design-system/design-system.component.html
+++ b/src/app/design-system/design-system.component.html
@@ -1,25 +1,29 @@
 
-
 <div class="design-system-container" >
 
     <p class="title headline-4">Product Feedback App Design System</p>
+
+        <!-- /////////////// COLORS ///////////// -->
+
     <p class="section-label headline-5">Colors</p>
     
-    <div class="box-container">
+    <div class="section colors-section">
         
-        <ng-container *ngFor="let color of PRODUCT_FEEDBACK_APP_COLOR_SPECS">
+        <div class="color-container" *ngFor="let color of PRODUCT_FEEDBACK_APP_COLOR_SPECS">
             
-            <div class="box" [style.backgroundColor]="color.hex">
+            <div class="color-box" [style.backgroundColor]="color.hex">
                 
                 <p class="color-text" [style.color]="color.textColor">{{color.hex}}</p>
                 
-                <span class="color-text" [style.color]="color.textColor">RGB: {{color.red}}, {{color.green}}, {{color.blue}}</span>
-                
             </div>
+
+            <p class="label-text color-label">RGB: {{color.red}}, {{color.green}}, {{color.blue}}</p>
             
-        </ng-container>
+        </div>
         
     </div>
+
+        <!-- /////////////// TYPOGRAPHY ///////////// -->
     
     <p class="section-label headline-5">Typography</p>
 
@@ -38,22 +42,22 @@
 
     <div class="section specs-section">
 
-        <div class="specs-container">
+        <div class="text-container">
             
             <div class="spec-container" *ngFor="let spec of PRODUCT_FEEDBACK_APP_TYPOGRAPHY_SPECS.slice(0,4)">
             
-                <p class="typography-spec" [innerText]="generateSpecText(spec)"></p>
+                <p class="label-text typography-label" [innerText]="generateSpecText(spec)"></p>
                 <p [ngStyle]="spec.cssClasses">{{spec.exampleText}}</p>
     
             </div>
 
         </div>
 
-        <div class="specs-container">
+        <div class="text-container">
 
             <div class="spec-container" *ngFor="let spec of PRODUCT_FEEDBACK_APP_TYPOGRAPHY_SPECS.slice(4)">
             
-                <p class="typography-spec" [innerText]="generateSpecText(spec)"></p>
+                <p class="label-text typography-label" [innerText]="generateSpecText(spec)"></p>
                 <p class="typogaphy-example" [ngStyle]="spec.cssClasses">{{spec.exampleText}}</p>
     
             </div>
@@ -61,16 +65,160 @@
         </div>
         
     </div>
-    
+
+        <!-- /////////////// BUTTONS ///////////// -->
+
     <p class="section-label headline-5">Buttons</p>
+
+    <div class="section buttons-section">
+
+        <div class="buttons-container">
+
+            <button mat-flat-button class="btn btn-1">Button 1</button>
+            <p class="label-text button-label">Default</p>
+            <button mat-flat-button class="btn btn-1 hover">Button 1</button>
+            <p class="label-text button-label hover">Hover</p>
+
+            <button mat-flat-button class="btn btn-5">< Go Back</button>
+            <p class="label-text button-label">Default</p>
+            <button mat-flat-button class="btn btn-5">< <span class="underline">Go Back</span></button>
+            <p class="label-text button-label hover">Hover</p>
+            
+        </div>
+        
+        <div class="buttons-container">
+            
+            <button mat-flat-button class="btn btn-2">Button 2</button>
+            <p class="label-text button-label">Default</p>
+            <button mat-flat-button class="btn btn-2 hover">Button 2</button>
+            <p class="label-text button-label hover">Hover</p>
+
+            <button mat-flat-button class="btn btn-6">< Go Back</button>
+            <p class="label-text button-label">Default</p>
+            <button mat-flat-button class="btn btn-6">< <span class="underline">Go Back</span></button>
+            <p class="label-text button-label hover">Hover</p>
+            
+        </div>
+        
+        <div class="buttons-container">
+            
+            <button mat-flat-button class="btn btn-3">Button 3</button>
+            <p class="label-text button-label">Default</p>
+            <button mat-flat-button class="btn btn-3 hover">Button 3</button>
+            <p class="label-text button-label hover">Hover</p>
+            
+        </div>
+        
+        <div class="buttons-container">
+            
+            <button mat-flat-button class="btn btn-4">Button 4</button>
+            <p class="label-text button-label">Default</p>
+            <button mat-flat-button class="btn btn-4 hover">Button 4</button>
+            <p class="label-text button-label hover">Hover</p>
+
+        </div>
+
+    </div>
+
+        <!-- /////////////// INTERACTIVE ELEMENTS ///////////// -->
+
     <p class="section-label headline-5">Interactive elements</p>
+
+    <div class="section interactive-section">
+
+        <div class="left">
+
+            <div class="column">
+
+                <button mat-flat-button class="btn btn-default">
+                    <p class="btn-text light caret">^</p>
+                    <p class="btn-text dark">99</p>
+                </button>
+
+                <p class="label-text interactive-label">Default</p>
+                
+                <button mat-flat-button class="btn btn-default">
+                    <p class="btn-text light">UX</p>
+                </button>
+                
+                <p class="label-text interactive-label">Default</p>
+                
+            </div>
+            
+            <div class="column">
+
+                <button mat-flat-button class="btn btn-hover">
+                    <p class="btn-text light caret">^</p>
+                    <p class="btn-text dark">99</p>
+                </button>
+
+                <p class="label-text interactive-label">Hover</p>
+                
+                <button mat-flat-button class="btn btn-hover">
+                    <p class="btn-text light">UX</p>
+                </button>
+                
+                <p class="label-text interactive-label">Hover</p>
+                
+            </div>
+            
+            <div class="column">
+
+                <button mat-flat-button class="btn btn-active">
+                    <p class="btn-text caret">^</p>
+                    <p class="btn-text">99</p>
+                </button>
+
+                <p class="label-text interactive-label">Active</p>
+                
+                <button mat-flat-button class="btn btn-active">
+                    <p class="btn-text">UX</p>
+                </button>
+                
+                <p class="label-text interactive-label">Active</p>
+                
+            </div>
+
+        </div>
+
+        <div class="right">
+
+            <div class="sort-buttons-container">
+
+                <button mat-flat-button class="sort-button sort-button-1"><span>Sort by: </span><span>Most Upvotes</span><span>^</span></button>
+                <button mat-flat-button class="sort-button"><span>Sort by: </span><span>Most Upvotes</span><span>^</span></button>
+
+            </div>
+
+            <div class="menu-container">
+                
+                <div class="option active">
+                    <p>Most Upvotes</p>
+                    <mat-icon>check</mat-icon>
+                </div>
+
+                <p class="option hover">Least Upvotes</p>
+                <p class="option">Most Comments</p>
+                <p class="option">Least Comments</p>
+
+            </div>
+
+        </div>
+
+    </div>
+
+        <!-- /////////////// FORM ELEMENTS ///////////// -->
+    
     <p class="section-label headline-5">Form elements</p>
-    <p class="section-label headline-5">Material Typography</p>
+    
+        <!-- /////////////// ADDITIONAL TYPOGRAPHY   ///////////// -->
+
+    <p class="section-label headline-5">Additional Typography</p>
 
     <div class="section typography-section">
         
         <div class="text-container">
-            <p class="title headline-6">Typography with mixins</p>
+            <p class="title headline-6">Sandbox typography mixins</p>
             
             <p class="h-1">Feedback app Headline 1</p>
             <p class="h-2">Feedback app Headline 2</p>
