--- a/src/app/design-system/design-system.component.scss
+++ b/src/app/design-system/design-system.component.scss
@@ -12,28 +12,63 @@
         margin: 20px 50px;
         max-width: 1440px;
 
-        .box-container {
-            @include sandboxMixin.flexboxLayout(row, space-between, flex-start);
-            flex-wrap: wrap;
-            margin-bottom: 20px;
-            
-            .box {
-                @include sandboxMixin.flexboxLayout(column, center, center);
-                border-radius: 4px;
-                height: 64px;
-                margin: 20px;
-                width: 15%;
-                
-                .color-text {
-                    @include sandboxMixin.typographyLevel($level: 'body-1');
-                }
-            }
-        }
-
+        /////////////// GENERIC ELEMENTS ///////////////////
+        
         .section {
             margin-bottom: 50px;
             width: 100%;
         }
+
+        .section-label {
+            align-self: center;
+            margin: 36px;
+        }
+
+        .text-container {
+            @include sandboxMixin.flexboxLayout(column, flex-start, flex-start);
+            margin-bottom: 20px;
+            width: 50%;
+        }
+
+        .label-text {
+            @include sandboxMixin.sbxBody1;
+            color: #647196;
+        }
+
+        ////////////////// COLORS ///////////////////////
+
+        .colors-section {
+            @include sandboxMixin.flexboxLayout;
+            flex-wrap: wrap;
+    
+            .color-container {
+                @include sandboxMixin.flexboxLayout(column, flex-start, flex-start);
+                flex: 1 0 auto;
+                margin-right: 20px;
+                padding: 20px;
+                width: 20%;
+                
+                .color-box {
+                    @include sandboxMixin.flexboxLayout(column, flex-end, flex-start);
+                    border-radius: 4px;
+                    height: 64px;
+                    padding: 16px 24px;
+                    width: 80%;
+                    
+                    .color-text {
+                        @include sandboxMixin.sbxBody1;
+                        @include sandboxMixin.color(transparent, sandboxVar.$color4);
+                    }
+                }
+                
+                .color-label {
+                    @include sandboxMixin.color(transparent, sandboxVar.$color8);
+                    margin: 16px 0;
+                }
+            }
+        }
+
+        //////////////////// TYPOGRAPHY ///////////////////////
 
         .typography-section {
             @include sandboxMixin.flexboxLayout;
@@ -42,69 +77,223 @@
                 width: 50%;
             }
 
-        }
-
-        .text-container {
-            @include sandboxMixin.flexboxLayout(column, flex-start, flex-start);
-            margin-bottom: 20px;
-            width: 50%;
+            .font-letters-container { 
+                line-height: 40px;
+                letter-spacing: 9.55px;
+                width: 50%;
+        
+                .caps {
+                    @include sandboxMixin.sbxH2;
+                }
+                
+                .lower {
+                    @include sandboxMixin.sbxBody1;
+                }
+            }
         }
         
         .font-highlight {
             @include sandboxMixin.flexboxLayout(row, center, center);
             align-self: stretch;
-            
         }
 
         .specs-section {
             @include sandboxMixin.flexboxLayout(row, flex-start, space-between);
-            width: 100%;
-            
-            .specs-container {
-                @include sandboxMixin.flexboxLayout(column, flex-start, flex-start);
-                width: 50%;
                 
-                .spec-container {
-                    @include sandboxMixin.flexboxLayout(column, flex-start, flex-start);
-                    width: 100%;
-        
-                    .typography-spec {
-                        @include sandboxMixin.sbxBody1;
-                        color: #647196;
-        
-                    }
-        
-        
-        
+            .spec-container {
+                @include sandboxMixin.flexboxLayout(column, flex-start, flex-start);
+                width: 100%;
+    
+                .typography-label {
+                    margin: 32px 0 8px;
                 }
             }
+        }
+    }
 
+    ////////////////////// BUTTONS /////////////////////
+
+    .buttons-section {
+        @include sandboxMixin.flexboxLayout(row, space-evenly, flex-start);
+        width: 100%;
+    }
+    
+    .buttons-container {
+        @include sandboxMixin.flexboxLayout(column, flex-start, center);
+
+        .btn {
+            @include sandboxMixin.sbxH4;
+            border-radius: 10px;
+            height: 44px;
+            margin-bottom: 24px;
+            width: 158px;
         }
         
-    }
+        .hover {
+            opacity: .65;
+        }
 
-    .section-label {
-        align-self: center;
-        margin: 36px;
-    }
+        .underline {
+            text-decoration: underline;
+        }
 
-    .font-letters-container { 
-        line-height: 40px;
-        letter-spacing: 9.55px;
-        width: 50%;
+        .button-label {
+            margin-bottom: 56px;
+        }
 
-        .caps {
-            @include sandboxMixin.sbxH2;
+        .btn-1 {
+            @include sandboxMixin.color(sandboxVar.$color1, sandboxVar.$color6);
+        }
+        
+        .btn-2 {
+            @include sandboxMixin.color(sandboxVar.$color2, sandboxVar.$color6);
+        }
             
+        .btn-3 {
+            @include sandboxMixin.color(sandboxVar.$color7, sandboxVar.$color6);
         }
         
-        .lower {
-            @include sandboxMixin.sbxBody1;
+        .btn-4 {
+            @include sandboxMixin.color(sandboxVar.$color11, sandboxVar.$color6);
+        }
+        
+        .btn-5 {
+            @include sandboxMixin.color(sandboxVar.$color6, sandboxVar.$color12);
+        }
 
+        .btn-6 {
+            @include sandboxMixin.color(sandboxVar.$color12, sandboxVar.$color6);
         }
 
 
     }
+
+    /////////////////////// INTERACTIVE ELEMENTS ///////////////////
+    
+    .interactive-section {
+        @include sandboxMixin.flexboxLayout;
+
+        .left {
+            @include sandboxMixin.flexboxLayout(row, space-evenly, center);
+            width: 50%;
+            
+            .column {
+                @include sandboxMixin.flexboxLayout(column, flex-start, center);
+                
+                .interactive-label {
+                    margin: 37px 0 88px;
+                }
+        
+                .btn {
+                    @include sandboxMixin.flexboxLayout(column, center, center);
+                    border-radius: 10px;
+                    height: 53px;
+                    
+                    .btn-text {
+                        @include sandboxMixin.sbxBody3;
+                        margin: 0;
+                    }
+        
+                    .caret {
+                        font-size: 20px;
+                    }
+                }
+                
+                .btn-default {
+                    @include sandboxMixin.color($backgroundColor: sandboxVar.$color5);
+        
+                    & .light {
+                        @include sandboxMixin.color($color: sandboxVar.$color2);
+                    }
+                    
+                    & .dark {
+                        @include sandboxMixin.color($color: sandboxVar.$color7);
+                    }
+                }
+                
+                .btn-hover {
+                    @include sandboxMixin.color($backgroundColor: sandboxVar.$color13);
+                    
+                    & .light {
+                        @include sandboxMixin.color($color: sandboxVar.$color2);
+        
+                    }
+                    
+                    & .dark {
+                        @include sandboxMixin.color($color: sandboxVar.$color7);
+                    }
+                }
+                
+                .btn-active {
+                    @include sandboxMixin.color($backgroundColor: sandboxVar.$color2);
+                }
+            }
+        }
+        
+        .right {
+            @include sandboxMixin.flexboxLayout(column, flex-start, flex-start);
+            height: 100%;
+            padding: 0 50px;
+            width: 50%;
+            
+            .sort-buttons-container {
+                @include sandboxMixin.flexboxLayout(column, space-between, flex-start);
+
+                .sort-button {
+                    @include sandboxMixin.color(sandboxVar.$color12, sandboxVar.$color5);
+                    border-radius: 10px;
+                    padding: 26px 18px;
+                    
+                    &-1 {
+                        margin-bottom: 50px;
+                    }
+        
+                }
+
+            }
+
+            .menu-container {
+                @include sandboxMixin.flexboxLayout(column, space-between, flex-start);
+                border-radius: 10px;
+                box-shadow: 0px 10px 40px -7px rgba(55, 63, 104, 0.350492);
+                margin-top: 20px;
+                
+                .option {
+                    @include sandboxMixin.sbxBody1;
+                    @include sandboxMixin.color(transparent, sandboxVar.$color8);
+                    padding: 12px 24px;
+                    vertical-align: middle;
+                    width: 255px;
+                    
+                    &:not(:last-of-type) {
+                        border-bottom: 1px solid rgba(sandboxVar.$color7, 0.15);
+                    }
+                }
+                
+                p {
+                    margin: 0;
+                }
+                
+                .active {
+                    @include sandboxMixin.flexboxLayout(row, space-between, center);
+                    border-bottom: 1px solid rgba(sandboxVar.$color7, 0.15);
+
+                    mat-icon {
+                        @include sandboxMixin.color(transparent, sandboxVar.$color1);
+                    }
+                }
+                
+                .hover {
+                    @include sandboxMixin.color(transparent, sandboxVar.$color1);
+                }
+            }
+        }
+    }
+
+    //////////////////// FORM ELEMENTS //////////////////////
+
+    
+    ////////////////////// SANDBOX TEXT MIXINS ///////////////////
 
     .h-1 {
         @include sandboxMixin.sbxH1;
@@ -133,6 +322,8 @@
     .b-3 {
         @include sandboxMixin.sbxBody3;
     }
+
+    /////////////////// MATERIAL TYPOGRAPHY LEVEL MIXINS //////////////
 
     .headline-1 {
         @include sandboxMixin.typographyLevel();
