[Design system] 3 - Implements Form Elements section

--- a/src/app/design-system/design-system.component.html
+++ b/src/app/design-system/design-system.component.html
@@ -1,8 +1,8 @@
 
-<div class="design-system-container" >
+<div class="design-system-container">
 
     <p class="title headline-4">Product Feedback App Design System</p>
-
+    
         <!-- /////////////// COLORS ///////////// -->
 
     <p class="section-label headline-5">Colors</p>
@@ -210,6 +210,104 @@
         <!-- /////////////// FORM ELEMENTS ///////////// -->
     
     <p class="section-label headline-5">Form elements</p>
+
+    <div class="section forms-section">
+
+        <div class="forms-group top">
+
+            <div class="form-container">
+
+                <p class="label-text form-label">Text Field - Default</p>
+
+                <input class="form-control form-control-default" type="text">
+                
+            </div>
+            
+            <div class="form-container">
+
+                <p class="label-text form-label">Text Field - Filled</p>
+
+                <input class="form-control form-control-filled" type="text" value="lorem ipsum dude">
+                
+            </div>
+            
+            <div class="form-container">
+
+                <p class="label-text form-label">Text Field - Active</p>
+
+                <input class="form-control form-control-active" type="text" value="lorem ipsum dude">
+                
+            </div>
+            
+            <div class="form-container">
+
+                <p class="label-text form-label">Text Field - Error</p>
+                
+                <input class="form-control form-control-error" type="text">
+                
+                <p class="error-text">Can't be empty</p>
+                
+            </div>
+            
+        </div>
+
+        <div class="forms-group">
+
+            <div class="form-container">
+
+                <p class="label-text form-label">Dropdown - Default</p>
+
+                <select class="dropdown dropdown-default">
+    
+                    <option class="option hover">Feature</option>
+                    <option class="option hover">UI</option>
+                    <option class="option">UX</option>
+                    <option class="option">Enhancement</option>
+                    <option class="option">Bug</option>
+
+                </select>
+                
+            </div>
+
+            <div class="form-container">
+
+                <p class="label-text form-label">Dropdown - Active</p>
+
+                <select class="dropdown dropdown-active">
+    
+                    <option class="option hover">Feature</option>
+                    <option class="option hover">UI</option>
+                    <option class="option">UX</option>
+                    <option class="option">Enhancement</option>
+                    <option class="option">Bug</option>
+
+                </select>
+                
+            </div>
+            
+            <div class="form-container">
+
+                <p class="label-text form-label">Dropdown - Menu</p>
+                
+                <div class="menu-container">
+                    
+                    <div class="option active">
+                        <p>Feature</p>
+                        <mat-icon>check</mat-icon>
+                    </div>
+    
+                    <p class="option hover">UI</p>
+                    <p class="option">UX</p>
+                    <p class="option">Enhancement</p>
+                    <p class="option">Bug</p>
+    
+                </div>
+                
+            </div>
+
+        </div>
+
+    </div>
     
         <!-- /////////////// ADDITIONAL TYPOGRAPHY   ///////////// -->
 
