--- a/src/app/_sanbox-mixins.scss
+++ b/src/app/_sanbox-mixins.scss
@@ -40,6 +40,14 @@
     @include mat.typography-level($typography, $level);
 }
 
+@mixin fontSpec($fontFamily: sandboxVar.$jost-font, $fontWeight: 400, $fontSize: 16px, $lineHeight: 24px, $letterSpacing: 0) {
+    font-family: $fontFamily;
+    font-weight: $fontWeight;
+    font-size: $fontSize;
+    line-height: $lineHeight;
+    letter-spacing: $letterSpacing;
+};
+
 @mixin sbxH1() {
     font-family: sandboxVar.$jost-font;
     font-weight: 700;
