[Books app] 1 - Implements Books App in Sandbox
-Adds interfaces and constants
-Adds ang-new-features and books routes in app.routing module
-Adds (empty) routed AngNewFeatures component
-Implements routed BooksView view-level component
-Implements BooksStore component store
-Implements BookForm and BooksTable child components
-Full CRUD operations are supported without persistence

--- a/src/app/_sanbox-mixins.scss
+++ b/src/app/_sanbox-mixins.scss
@@ -26,9 +26,9 @@
 ////////////// BORDER //////////////////////
 
 
-@mixin border1($color: black, $radius: 4px) {
+@mixin border1($color: black, $width: 1px, $radius: 4px) {
     border-radius: $radius;
-    border: 1px solid $color;
+    border: $width solid $color;
 }
 
 ////////////// END BORDER //////////////////////////// 
