[Sandbox] PagesRead feature - implements computed signal for number of pages read for each book and total pages read

--- a/src/app/books-view/book-form/book-form.component.html
+++ b/src/app/books-view/book-form/book-form.component.html
@@ -39,6 +39,15 @@
                 <input matInput placeholder="Year published" formControlName="yearControl">
                 
             </mat-form-field>
+
+            <!-- PagesRead control -->
+            
+            <mat-form-field appearance="outline">
+                <mat-label>Pages read</mat-label>
+                
+                <input matInput placeholder="Pages read" formControlName="pagesReadControl">
+                
+            </mat-form-field>
        
             <!-- Category control -->
             
