--- a/src/app/books-view/books-table/books-table.component.html
+++ b/src/app/books-view/books-table/books-table.component.html
@@ -8,6 +8,7 @@
 
             <th mat-header-cell *matHeaderCellDef>Id</th>
             <td mat-cell *matCellDef="let book">{{book.id}}</td>
+            <td mat-footer-cell *matFooterCellDef> Total books </td>
 
         </ng-container>
 
@@ -17,6 +18,7 @@
 
             <th mat-header-cell *matHeaderCellDef>Title</th>
             <td mat-cell *matCellDef="let book">{{book.title}}</td>
+            <td mat-footer-cell *matFooterCellDef> {{totalBooks()}} </td>
 
         </ng-container>
         
@@ -27,6 +29,7 @@
 
             <th mat-header-cell *matHeaderCellDef>Author</th>
             <td mat-cell *matCellDef="let book">{{book.author}}</td>
+            <td mat-footer-cell *matFooterCellDef> {{contrivedNum()}} </td>
 
         </ng-container>
 
@@ -36,6 +39,17 @@
 
             <th mat-header-cell *matHeaderCellDef>Year</th>
             <td mat-cell *matCellDef="let book">{{book.year}}</td>
+            <td mat-footer-cell *matFooterCellDef> Total pages read </td>
+
+        </ng-container>
+
+        <!-- PagesRead -->
+
+        <ng-container matColumnDef="pagesRead">
+
+            <th mat-header-cell *matHeaderCellDef>Pages read</th>
+            <td mat-cell *matCellDef="let book">{{book.pagesRead}}</td>
+            <td mat-footer-cell *matFooterCellDef> {{totalPagesRead()}} </td>
 
         </ng-container>
         
@@ -62,6 +76,7 @@
     
                 </div>
             </td>
+            <td mat-footer-cell *matFooterCellDef></td>
 
         </ng-container>
 
@@ -85,6 +100,7 @@
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
 
     </table>
 
