--- a/src/app/design-system/design-system.component.html
+++ b/src/app/design-system/design-system.component.html
@@ -35,7 +35,7 @@
 
         <div class="font-container font-letters-container">
             <span class="font-letters caps">A B C D E F G H I J K L M N O P Q R S T U V W X Y Z</span>
-            <span class="font-letters lower">a b c d e f g h i j k l m n o p q r s t u v w x y z 1 2 3 4 5 6 7 8 9 0 ! @ # $ % ^ & * ( ) _ +</span>
+            <span class="font-letters lower">a b c d e f g h i j k l m n o p q r s t u v w x y z 1 2 3 4 5 6 7 8 9 0 ! &#64; # $ % ^ & * ( ) _ +</span>
         </div>
 
     </div>
