[Signals store] 2 - Finishes implementation of TodosSignalStore app

--- a/src/app/todos-signals/comps/todos-view/todos-view.component.scss
+++ b/src/app/todos-signals/comps/todos-view/todos-view.component.scss
@@ -6,4 +6,9 @@
     @include sandboxMixin.border1();
     margin: 20px;
     padding: 20px;
+    
+    .todos-view-container {
+        @include sandboxMixin.flexboxLayout(column, center, center);
+        width: 100%;
+    }
 }
